# c-cnc

./: .gitignore  CMakeLists.txt  C_BASICS.md  Components.cmake  Dockerfile.in  README.md  axes.gp  fsm2.dot  lookahead.gcode  plot.gp  point  settings.ini  table.txt  test.g  test.gcode  test2.g  test3.g
MATLAB/: Cartesian3DPrinter.m  README.md  SimpleAxis.m  SingleAxis.m  block.mlx  execution_time_analysis.m  get_setpoint.m  mqtt_pub.m  mqtt_sub.m  print_exe_time_stats.m  simple_axis.slx  simple_axis_3.slx  simple_axis_data.m  single_axis.slx  sm_3d_printer.slx  sm_3d_printer_parameters.m  test_simple_axis.slx
MATLAB/Printer/CAD/: Bracket.STEP  Gantry.STEP  Guide_Rail_x.STEP  Guide_Rail_y.STEP  Guide_Rail_z.STEP  Motor.STEP  Printing_Base.STEP  Printing_Bed.STEP  Printing_head.STEP  SM_table.STEP  Screw_x.STEP  Screw_y.STEP  Sliding_Block.STEP  screw_z.STEP
MATLAB/s-functions/: mqtt_pub.m  mqtt_pub_rapid.m  mqtt_pub_rapid_new.m  mqtt_sub.m  mqtt_sub_position.m  mqtt_sub_position_new.m
MTViewer/: CMakeLists.txt  README.md
MTViewer/AntTweakBar/: LoadOGLCore.cpp  LoadOGLCore.h  TwMgr.cpp  TwPrecomp.h
MTViewer/viewer/: LinearAxis.cpp  LinearAxis.h  MachineTool.cpp  MachineTool.h  NewViewer.cpp  NewViewer.h  Prism.cpp  Prism.h
block.dSYM/Contents/: Info.plist
block.dSYM/Contents/Resources/DWARF/: block
examples/: README.md  ex1  main
examples/include/: include_guards1.h  inout_p.h  struct_union.h
examples/src/: alloc.c  cast.c  ctrlc.c  ex1.c  f1.c  f2.c  file.c  files.c  include_guards.c  inout_lib.c  inout_p.c  linkedlist.c  linklist.c  llist.c  llist.h  llist_main.c  main.c  mqtt.c  mylib.h  pointers.c  poly.c  poly_main.c  polygon.c  polygon.h  polyline.c  pp_include1.h  pp_include2.h  pp_main.c  renumber.c  struct  struct.c  struct_union.c  timed.c  timed1.c  timed2.c  timed3.c  transform.c
goodies/: README.md  broker_start  broker_start.ps1  mosquitto.conf
machine/: README.md
machine/src/: machine.c  machine.h  pid.c  pid.h  timer.c
src/: _example.c  _example.h  block.c  block.h  bock_la.c  ccnc.h  defines.h.in  example.dot  fsm.c  fsm.dot  fsm.h  inic.cpp  inic.h  look_ahead.c  look_ahead.h  machine.c  machine.h  plot.c  plot.h  point.c  point.h  program.c  program.h  program_la.c  program_la.h  utils.c
src/main/: block.c  c-cnc.c  ccnc.c  ccnc_fsm.c  commissioning.c  exam.c  ini_test.c  mqtt_stress.c  mqtt_test.c  parse.c  test.c
